--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
+    "discord.js": "^14.16.3",
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
